--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "space-couch",
   "version": "0.0.1",
   "description": "Project Space Couch",
+  "license": "MIT",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "./bin/build-scss & electron .",
+    "build-scss": "./bin/build-scss"
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,8 @@
   },
   "homepage": "https://github.com/Nebual/space-couch#readme",
   "devDependencies": {
-    "electron-prebuilt": "^1.2.0"
+    "electron-prebuilt": "^1.2.0",
+    "node-sass": "^3.8.0"
   },
   "dependencies": {
     "async": "^2.0.1",
@@ -31,7 +34,8 @@
     "electron-window": "^0.8.1",
     "express": "^4.14.0",
     "ico": "^0.3.3",
-    "jQuery": "^1.7.4",
+    "jquery": "^3.1.0",
+    "node-sass": "^3.8.0",
     "qrcode-npm": "0.0.3",
     "tether": "latest",
     "websocket": "^1.0.23"
