--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Project Space Couch",
   "license": "MIT",
-  "main": "generated/js/main.js",
+  "main": "generated/js/server.js",
   "scripts": {
     "postinstall": "node node_modules/typings/dist/bin.js install",
 
