Split ClientNet class off of global.ts; rename to client.ts

--- a/package.json
+++ b/package.json
@@ -6,19 +6,17 @@
   "main": "generated/js/server.js",
   "scripts": {
     "postinstall": "node node_modules/typings/dist/bin.js install",
-
-    "build:js": "node node_modules/typescript/bin/tsc",
-    "build:css": "node node_modules/node-sass/bin/node-sass --include-path assets/scss assets/scss/ --output generated/styles/ --output-style expanded",
-    "build": "npm run build:js && npm run build:css",
-    "clean": "rm -r generated/ dist/",
-
-    "watch:js": "node node_modules/typescript/bin/tsc -w",
-    "watch:css": "node node_modules/node-sass/bin/node-sass -w --include-path assets/scss assets/scss/ --output generated/styles/ --output-style expanded",
-    "watch": "npm run watch:js & npm run watch:css && fg",
-
+    "build:js": "tsc",
+    "build:js-client": "tsc -p tsconfig.client.json",
+    "build:css": "node-sass --include-path assets/scss assets/scss/ --output generated/styles/ --output-style expanded",
+    "build": "npm-run-all --parallel build:*",
+    "clean": "rm -rf generated/ dist/",
+    "watch:js": "tsc -w",
+    "watch:js-client": "tsc -w -p tsconfig.client.json",
+    "watch:css": "node-sass -w --include-path assets/scss assets/scss/ --output generated/styles/ --output-style expanded",
+    "watch": "npm-run-all --parallel watch:* build:css",
     "dist": "npm run build && node node_modules/electron-packager/cli.js . space-couch --out dist/ --prune --ignore \\.idea --ignore typings --ignore .*\\.7z --ignore node_modules/electron/dist --platform=win32 --arch=x64",
     "7z": "./node_modules/7zip-bin-linux/x64/7za a space-couch-win32-x64.7z dist/space-couch-win32-x64",
-    
     "start": "electron ."
   },
   "repository": {
@@ -40,6 +38,7 @@
     "electron-packager": "^7.4.0",
     "electron-prebuilt": "^1.2.0",
     "node-sass": "^3.8.0",
+    "npm-run-all": "^2.3.0",
     "typescript": "^1.8.10",
     "typings": "^1.3.2"
   },
