--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -6,6 +6,7 @@
     },
     "files": [
         "typings/index.d.ts",
+        "assets/ts/client.d/Util.ts",
         "assets/ts/client.d/ClientNet.ts",
         "assets/ts/client.d/range-slider.ts",
         "assets/ts/client.d/client.ts"
