--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"express": "^4.14.0",
 		"express-minify": "^1.0.0",
 		"gsap": "^3.0.2",
+		"minimist": "^1.2.0",
 		"pathfinding": "^0.4.18",
 		"prop-types": "^15.7.2",
 		"qrcode": "^1.4.4",
