--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
   "homepage": "https://github.com/Nebual/space-couch#readme",
   "devDependencies": {
     "7zip-bin": "^1.0.5",
+    "compass-mixins": "^0.12.10",
     "electron-packager": "^7.4.0",
     "electron-prebuilt": "^1.2.0",
-    "compass-mixins": "^0.12.10",
     "mathsass": "^0.9.5",
     "node-sass": "^3.8.0",
-    "npm-run-all": "^2.3.0",
+    "npm-run-all": "^4.1.5",
     "typescript": "^1.8.10",
     "typings": "^1.3.2"
   },
@@ -61,7 +61,13 @@
     "websocket": "^1.0.23"
   },
   "contributors": [
-    {"name": "Nebual", "url": "https://github.com/Nebual"},
-    {"name": "Rob Williams", "url": "https://github.com/Robert-Williams"}
+    {
+      "name": "Nebual",
+      "url": "https://github.com/Nebual"
+    },
+    {
+      "name": "Rob Williams",
+      "url": "https://github.com/Robert-Williams"
+    }
   ]
 }
