--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "license": "MIT",
   "main": "generated/js/server.js",
   "scripts": {
-    "postinstall": "node node_modules/typings/dist/bin.js install",
     "build:js": "tsc",
     "build:js-client": "tsc -p tsconfig.client.json",
     "build:css": "node-sass --include-path assets/scss assets/scss/ --output generated/styles/ --output-style expanded",
@@ -23,36 +22,37 @@
     "type": "git",
     "url": "git+https://github.com/Nebual/space-couch.git"
   },
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial"
-  ],
   "bugs": {
     "url": "https://github.com/Nebual/space-couch/issues"
   },
   "homepage": "https://github.com/Nebual/space-couch#readme",
   "devDependencies": {
-    "7zip-bin": "^1.0.5",
+    "@types/bootstrap": "^3.3.7",
+    "@types/express": "^4.17.1",
+    "@types/express-serve-static-core": "^4.16.10",
+    "@types/hammerjs": "^2.0.36",
+    "@types/jquery": "^3.3.31",
+    "@types/node": "^12.11.7",
+    "@types/serve-static": "^1.13.3",
+    "@types/websocket": "^1.0.0",
+    "7zip-bin": "^5.0.3",
     "compass-mixins": "^0.12.10",
-    "electron-packager": "^7.4.0",
+    "electron-packager": "^14.0.6",
     "electron-prebuilt": "^1.2.0",
-    "mathsass": "^0.9.5",
-    "node-sass": "^3.8.0",
+    "mathsass": "^0.11.0",
+    "node-sass": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "typescript": "^1.8.10",
-    "typings": "^1.3.2"
+    "typescript": "^3.6"
   },
   "dependencies": {
-    "async": "^2.0.1",
+    "async": "^3.1.0",
     "bootstrap": "^3.3.7",
     "compression": "^1.6.2",
     "ejs": "^2.5.1",
-    "electron": "latest",
+    "electron": "^7.0.0",
     "electron-window": "^0.8.1",
     "express": "^4.14.0",
-    "express-minify": "^0.2.0",
+    "express-minify": "^1.0.0",
     "ico": "^0.3.3",
     "jquery": "^3.1.0",
     "pathfinding": "^0.4.18",
