Initial porting of UI to React

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
-node_modules
-.idea/*
-generated/*
-dist/*
-typings/*
 *.7z
+.idea/*
+
+/node_modules
+/.pnp
+.pnp.js
+
+/build
+/dist
+/generated
+
+# misc
+/coverage
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
