--- a/package.json
+++ b/package.json
@@ -66,6 +66,9 @@
 		"tether": "latest"
 	},
 	"dependencies": {
+		"@material-ui/core": "^4.7.1",
+		"@material-ui/styles": "latest",
+		"classnames": "^2.2.6",
 		"express": "^4.14.0",
 		"pathfinding": "^0.4.18",
 		"qrcode-npm": "0.0.3",
@@ -73,6 +76,7 @@
 		"react-dom": "^16.12.0",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.2.0",
+		"react-swipeable": "^5.5.0",
 		"typescript": "^3.7.3",
 		"websocket": "^1.0.23"
 	},
