--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,15 @@
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
 		"strict": true,
+		"noImplicitAny": false,
 		"forceConsistentCasingInFileNames": true,
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
-		"isolatedModules": false,
+		"isolatedModules": true,
 		"noEmit": true,
 		"jsx": "react"
 	},
-	"exclude": ["node_modules", "dist"],
+	"typeRoots": ["node_modules/@types", "src/@types", "src/server/@types"],
+	"exclude": ["node_modules", "build", "build-server", "src/server"],
 	"include": ["src"]
 }
