--- a/package.json
+++ b/package.json
@@ -37,7 +37,12 @@
 	"dependencies": {
 		"@material-ui/core": "^4.7.1",
 		"@material-ui/styles": "latest",
+		"@vx/group": "^0.0.192",
+		"@vx/point": "^0.0.192",
+		"@vx/scale": "^0.0.192",
+		"@vx/shape": "^0.0.192",
 		"classnames": "^2.2.6",
+		"color": "^3.1.2",
 		"express": "^4.14.0",
 		"express-minify": "^1.0.0",
 		"gsap": "^3.0.2",
