--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 	},
 	"dependencies": {
 		"@material-ui/core": "^4.7.1",
-		"@material-ui/styles": "latest",
+		"@material-ui/styles": "^4.7.1",
 		"@vx/group": "^0.0.192",
 		"@vx/point": "^0.0.192",
 		"@vx/scale": "^0.0.192",
@@ -53,7 +53,7 @@
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-router-dom": "^5.1.2",
-		"react-scripts": "3.2.0",
+		"react-scripts": "3.3.0",
 		"react-swipeable": "^5.5.0",
 		"typescript": "^3.7.3",
 		"unique-slug": "^2.0.2",
