Server: hot reloading!

--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
 	"description": "Project Space Couch",
 	"license": "MIT",
 	"scripts": {
-		"start": "react-scripts start",
-		"start:server": "yarn build:server && node build-server/server.js",
-		"build": "react-scripts build",
+		"start": "concurrently --names 'server,tsc,webpack' --handle-input 'yarn watch:server:express' 'yarn watch:server:tsc' 'yarn watch:client'",
+		"serve": "node build-server/server.js",
+		"build": "concurrently yarn:build:*",
+		"build:client": "react-scripts build",
 		"build:server": "tsc -p src/server/tsconfig.json",
-		"watch:server": "tsc -w -p src/server/tsconfig.json",
+		"watch:client": "react-scripts start",
+		"watch:server": "concurrently --handle-input --prefix none 'yarn watch:server:express' 'yarn watch:server:tsc'",
+		"watch:server:tsc": "tsc -w -p src/server/tsconfig.json --preserveWatchOutput --noEmitOnError",
+		"watch:server:express": "node build-server/server.js --load-last --watch",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
@@ -28,7 +32,9 @@
 		"@types/node": "^12.12.14",
 		"@types/pathfinding": "^0.0.4",
 		"@types/websocket": "^1.0.0",
+		"chokidar": "^3.3.0",
 		"compass-mixins": "^0.12.10",
+		"concurrently": "^5.0.1",
 		"mathsass": "^0.11.0",
 		"node-sass": "^4.13.0",
 		"npm-run-all": "^4.1.5",
