--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	},
 	"dependencies": {
 		"@material-ui/core": "^4.7.1",
+		"@material-ui/icons": "^4.5.1",
 		"@material-ui/styles": "^4.7.1",
 		"@vx/group": "^0.0.192",
 		"@vx/point": "^0.0.192",
