--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@types/node": "^12.12.14",
 		"@types/pathfinding": "^0.0.4",
 		"@types/websocket": "^1.0.0",
+		"babylonjs": "^4.0.3",
 		"chokidar": "^3.3.0",
 		"compass-mixins": "^0.12.10",
 		"concurrently": "^5.0.1",
