--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -14,6 +14,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
+		"inlineSourceMap": true,
 		"isolatedModules": true
 	},
 	"exclude": ["node_modules", "build", "build-server"],
