--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"prettier": "^1.19.1"
 	},
 	"dependencies": {
+		"@inlet/react-pixi": "^1.1.11",
 		"@material-ui/core": "^4.7.1",
 		"@material-ui/icons": "^4.5.1",
 		"@material-ui/styles": "^4.7.1",
@@ -56,14 +57,16 @@
 		"gsap": "^3.0.2",
 		"minimist": "^1.2.0",
 		"pathfinding": "^0.4.18",
+		"pixi.js": "^5.2.0",
 		"prop-types": "^15.7.2",
 		"qrcode": "^1.4.4",
+		"raf": "^3.4.1",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.3.0",
+		"react-sizeme": "^2.6.10",
 		"react-swipeable": "^5.5.0",
-		"react-touch": "^0.4.4",
 		"simplex-noise": "^2.4.0",
 		"typescript": "^3.7.3",
 		"unique-slug": "^2.0.2",
