--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"watch:server:tsc": "tsc -w -p src/server/tsconfig.json --preserveWatchOutput --noEmitOnError",
 		"watch:server:express": "node build-server/server.js --load-last --watch",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"postinstall": "patch-package"
 	},
 	"main": "build-server/server.js",
 	"repository": {
@@ -56,8 +57,10 @@
 		"express-minify": "^1.0.0",
 		"gsap": "^3.0.2",
 		"minimist": "^1.2.0",
+		"patch-package": "^6.2.0",
 		"pathfinding": "^0.4.18",
 		"pixi.js": "^5.2.0",
+		"postinstall-postinstall": "^2.0.0",
 		"prop-types": "^15.7.2",
 		"qrcode": "^1.4.4",
 		"raf": "^3.4.1",
